{
    "name": "Controls",
    "maps": [
        {
            "name": "Naninovel",
            "id": "81c10a82-f71d-4b5a-89c2-b7e3b8860a87",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "17a3c3e5-8dc9-4abb-bb91-797c1f964cc2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "d527d4ea-4098-4081-880e-326761ba4afa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "96a03d77-4cb7-4d3d-bbc2-15da419a031d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "09ffc7b1-876b-4bd2-a08d-cd0d2084d572",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AutoPlay",
                    "type": "Button",
                    "id": "fbf658c0-ba49-4a22-b90c-956e68b48368",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleUI",
                    "type": "Button",
                    "id": "50ab2dbe-d5da-42e0-91c1-9e9b087468de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowBacklog",
                    "type": "Button",
                    "id": "00319e7a-cb64-4353-ad04-19ac15043d00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rollback",
                    "type": "Button",
                    "id": "3b8e9941-baaa-4e9f-8f48-fe4bbd9cbfca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraLookX",
                    "type": "Value",
                    "id": "850910af-1949-42d6-8a39-1b7ef5492ae4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraLookY",
                    "type": "Value",
                    "id": "1805f027-cc33-4485-9553-4dbd06dca935",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fac2a97e-973d-4b76-a8e3-7c3e5be0cd98",
                    "path": "*/{PrimaryAction}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "620266e3-c4e8-4f68-a603-76e5238c1d97",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8df0ba1-8913-41d2-876e-51dbe450530f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e53cc52-386d-4ead-92bf-a84a7dfaa91b",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e48e7a5-996f-4e3f-b7f5-5319fcc845b6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4cb3974f-7bfb-41b3-a44c-b2618a5e4983",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Hold",
                    "processors": "Normalize",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc89ea4f-8fb6-422d-87c4-23e419f16d1f",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab359d6e-9ae6-491b-9092-65041543e266",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ba4d953-00bc-41aa-9add-2382400b06dc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoPlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24aa9d78-6402-4e31-a928-ebf3fad612b9",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoPlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e8153bc-76f0-4cd0-bddb-af1a34e17bdb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27b588f6-307e-4864-9650-eb2861cb9146",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6939d43e-0994-4930-a2ca-4221ef7f38d1",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowBacklog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "faf78e32-7e6c-4558-a2bd-e86c876eea3a",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowBacklog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05ee7be6-fd9c-4cf8-a219-0887c873f4c8",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rollback",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d027c0e8-25b5-4393-834f-780f187fb56f",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rollback",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9726889-3ce6-474f-8620-687711e66549",
                    "path": "*/{ScrollHorizontal}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLookX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb391d42-2624-4da6-b024-0df7a0c48683",
                    "path": "*/{ScrollVertical}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLookY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}